# Noisett

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_generate.py
.github/workflows/: deploy.yml
Docs/Archive/: image-generation-strategy.md  product-strategy-brief.md
Docs/Archive/specs-design/: 01-Web-App-UI.spec.md  02-Figma-Plugin-UI.spec.md  03-UI-Text-Strings-and-Copy.spec.md  04-Design-Tokens-and-Visual-Language.spec.md
Docs/Archive/specs-dev/: 00-Dev-Specs.spec.md  01-Architecture-and-System-Design.spec.md  02-API-Specification.spec.md  03-Frontend-Implementation.spec.md  04-ML-Pipeline-and-Model-Integration.spec.md  (+2 more)
Docs/Strategy/: 00-overview.md  01-commands.md  02-mcp-server.md  03-web-ui.md  04-deployment.md  05-training-pipeline.md  06-quality-pipeline.md  07-figma-plugin.md  08-auth-storage.md  09-future-enhancements.md
figma-plugin/: build.js  manifest.json  package.json  pnpm-lock.yaml  tsconfig.json
figma-plugin/src/: api.ts  code.ts  types.ts  ui.html  ui.ts
infrastructure/: container-app.yaml  setup-azure.sh
src/: __init__.py  cli.py
src/commands/: __init__.py  asset.py  favorites.py  history.py  job.py  lora.py  model.py  quality.py
src/core/: __init__.py  auth.py  errors.py  result.py  storage.py  types.py
src/ml/: __init__.py
src/server/: __init__.py  api.py  mcp.py
tests/: __init__.py  conftest.py  test_api.py  test_asset.py  test_favorites.py  test_history.py  test_job.py  test_lora.py  test_model.py  test_quality.py
web/: api.js  app.js  index.html  styles.css
(+3 files in other folders)
