[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noisett"
version = "0.1.0"
description = "AI Brand Asset Generator - Generate on-brand illustrations and icons"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Falkicon" }
]
keywords = ["ai", "image-generation", "mcp", "agent-first"]

dependencies = [
    "pydantic>=2.5.0",
    "fastmcp>=0.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1.0",
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
noisett = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
